[tool.poetry]
name = "higher-or-lower-urls"
version = "1.0.0"
description = "Guess the number"

license = "MIT"

authors = ["Alen Vlahovljak"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0"

[tool.poetry.scripts]
my-script = "my_package:main"